This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php




Version ???    ???

--Editor now supports importing temporary test map (so you can work on and
  tweak a test map without actually saving a scene into the scene folder).



Server Fixes

--Whoops, never followed up after d7e614bcf699c27aaf6526e8a360ae95023305d4 back
  in 2020.  That setting that cleared curse counts on server startup was
  supposed to be a temporary thing for one startup only.  Set it to 0 now.
  Part of #857

--Forgiveness now logged in curseLog with F.  Fixes #857

--We now push Donkeytown players out by 200M tiles in X only, instead of 20K
  tiles in both X and Y.  This puts them far enough away that they will never
  be able to travel to interact with other players, nor will they be able to
  screw up the land ahead of other player's westward progress.  Also, by
  pushing them in the X direction only, we allow Y-placement of Donkeytown Eves
  to still land in their home biome bands.  Fixes #856

--New FORGIVE EVERYONE command (which undoes all curses that you've ever
  issued).  CurseLog now includes lines for expiring curses (E) and forgiving
  everyone (A).  CurseDB code no longer worries about old key format (which
  changed more than 90 days ago).  Fixes #858



Server Fixes  (2023-July-7)

--Respawning Eves (that return to their own camps) on low-pop servers now crave
  all foods for their second craving and beyond.  Their first craving is still
  limited to low-tier foods.  Thanks Slinky.  Fixes #842

--Fixed counting of mothers, grandmothers, etc. in fitness.  Fixes #846

--Makefile now includes -auto-orient option to imagemagick convert command, as
  a work-around for a bug in certain versions of convert that flips images
  upside-down when converting to TGA.  Fixes jasonrohrer/OneLife#848

--Fixed so that heir that inherits property is fittest offspring or relative